fix: minor layout issues on labels

--- a/components/inputform/inputform-material.scss
+++ b/components/inputform/inputform-material.scss
@@ -4,8 +4,5 @@
 @mixin inputform-material() {
     &.mmf-form--input {
         @include with-moving-label("input");
-        .mmf-input {
-            border-color: transparent;
-        }
     }
 }
