--- a/components/selectform/selectform-material.scss
+++ b/components/selectform/selectform-material.scss
@@ -4,6 +4,6 @@
 
 @mixin selectform-material() {
     &.mmf-form--select .mmf-label {
-        line-height: 29px;
+        line-height: 1.2em;
     }
 }
